--- a/front/src/index.css
+++ b/front/src/index.css
@@ -3,3 +3,29 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+.cardLoginScreen {
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, 0%);
+
+    width: 40%;
+    height: auto;
+
+    padding: 20px;
+
+    color: white;
+    text-align: center;
+}
+
+.loginscreen {
+    margin: 0;
+    padding: 0;
+}
+
+.card {
+    width: 60%;
+    margin: auto;
+
+}
