--- a/front/src/index.css
+++ b/front/src/index.css
@@ -10,10 +10,8 @@ body {
     top: 50%;
     transform: translate(-50%, 0%);
 
-    width: 40%;
+    width: 70%;
     height: auto;
-
-    padding: 20px;
 
     color: white;
     text-align: center;
@@ -24,8 +22,9 @@ body {
     padding: 0;
 }
 
-.card {
-    width: 60%;
+.card.cardRegister {
+    width: 40%;
     margin: auto;
+    border-radius: 15px;
 
 }
