--- a/front/src/index.css
+++ b/front/src/index.css
@@ -28,3 +28,43 @@ body {
     border-radius: 15px;
 
 }
+
+.card-project {
+    margin: 20px;
+    height: 380px;
+    max-width: 300px;
+    min-width: 300px;
+}
+
+
+#root {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    padding-top: 25px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.card-body {
+    height: 130px;
+}
+
+.project-btn {
+    background-image:linear-gradient(60deg, lightblue, darkblue);
+}
+
+Button.add-project-btn {
+    border-radius: 100%;
+    display: block;
+    height: 20px;
+    width: 20px;
+}
+
+#plus {
+    width: 20px;
+    text-align: center;
+    margin: 0;
+
+
+}
