--- a/front/src/index.css
+++ b/front/src/index.css
@@ -13,21 +13,58 @@ body {
     width: 70%;
     height: auto;
 
+    color: white;
     text-align: center;
 }
 
-.cardRegister {
+.loginscreen {
+    margin: 0;
+    padding: 0;
+}
+
+.card.cardRegister {
     width: 40%;
     margin: auto;
     border-radius: 15px;
-    text-align: center;
+
 }
 
-.icon-position {
-    text-align: left;
-}
-
-#logo {
-    width: 25%;
+.card-project {
     margin: 20px;
+    height: 380px;
+    max-width: 300px;
+    min-width: 300px;
+}
+
+
+#root {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    padding-top: 25px;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.card-body {
+    height: 130px;
+}
+
+.project-btn {
+    background-image:linear-gradient(60deg, lightblue, darkblue);
+}
+
+Button.add-project-btn {
+    border-radius: 100%;
+    display: block;
+    height: 20px;
+    width: 20px;
+}
+
+#plus {
+    width: 20px;
+    text-align: center;
+    margin: 0;
+
+
 }
