--- a/front/src/index.css
+++ b/front/src/index.css
@@ -4,6 +4,8 @@ body {
     font-family: sans-serif;
 }
 
+/* ------- LOGIN REGISTER PAGE ------- */
+
 .cardLoginScreen {
     position: relative;
     left: 50%;
@@ -54,17 +56,15 @@ body {
     background-image:linear-gradient(60deg, lightblue, darkblue);
 }
 
+/* ------- BUTTON 'PLUS' IN PROJECT PAGE ------- */
+
 Button.add-project-btn {
-    border-radius: 100%;
-    display: block;
-    height: 20px;
-    width: 20px;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
 }
 
 #plus {
     width: 20px;
-    text-align: center;
     margin: 0;
-
-
 }
