--- a/front/src/index.css
+++ b/front/src/index.css
@@ -4,11 +4,23 @@ body {
     font-family: sans-serif;
 }
 
-/* ------- LOGIN REGISTER PAGE ------- */
+/* ------- HOME PAGE ------- */
 
 .cardLoginScreen {
-    width: 70%;
     height: auto;
+}
+
+.logo-HomePage {
+    text-align: center;
+}
+
+#logo {
+    width: 30%;
+    margin-top: 15%;
+}
+
+.header > h4 {
+    margin-top: 15px;
 }
 
 .cardRegister {
@@ -41,7 +53,49 @@ body {
     background-image:linear-gradient(60deg, lightblue, darkblue);
 }
 
-/* ------- BUTTON 'PLUS' IN PROJECT PAGE ------- */
+
+
+/* ------- LOGIN CSS ------- */
+
+.login-account {
+    display: flex;
+    justify-content: center;
+    margin-top: 10em;
+}
+
+#title-login span {
+    color: royalblue;
+}
+
+#login-page-button {
+    display: flex;
+    margin-left: 10px;
+    left: 33%;
+}
+
+#link-forgot-pass {
+    display: flex;
+    justify-content: center;
+    font-size: x-small;
+    margin-top: 10px;
+}
+
+#new-to-us {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+/* ------- MESSAGE ERROR ------- */
+
+#errorMailMsg {
+    color: red;
+}
+
+#errorPassMsg {
+    color: red;
+}
+
+/* ------- PROJECT PAGE ------- */
 
 Button.add-project-btn {
     border-radius: 50%;
@@ -52,4 +106,278 @@ Button.add-project-btn {
     font-size: 2rem;
     padding: 0;
     background-color: darkred;
+}
+
+
+
+
+
+
+
+
+
+
+
+/* -------  CSS APP.SCSS   ------- */
+
+
+/* ************************************************************************* */
+/* ------------------------- Defining Constants ---------------------------- */
+/* ************************************************************************* */
+/* ************************************************************************* */
+/* ---------------------------- Theme Design ------------------------------- */
+/* ************************************************************************* */
+@media (min-width: 320px) {
+    .segment.mobile-navbar {
+        background: transparent !important;
+        z-index: 1;
+        border-bottom: 1px solid rgba(255, 255, 255, .15) !important;
+        position: absolute;
+        width: 100%;
+    }
+    .segment.mobile-navbar .logo img {
+        width: 105px !important;
+        margin-bottom: -5px !important;
+        margin-left: -5px !important;
+    }
+    .segment.mobile-navbar .menu {
+        background: transparent !important;
+    }
+    .segment.mobile-navbar .menu .right.menu > .item:last-child {
+        border: 1px solid #fff;
+    }
+    .segment.mobile-navbar .menu .right.menu > .item:last-child .menu.transition {
+        position: absolute;
+        top: 44px;
+        width: 100vw;
+        right: -135%;
+        background-color: rgba(255, 255, 255, .99) !important;
+        z-index: 299;
+        overflow: visible;
+        box-shadow: 5px 0 10px 2px rgba(0, 0, 0, 1);
+        text-align: center;
+    }
+    .segment.mobile-navbar .menu .right.menu > .item:last-child .menu.transition .ui.divider {
+        margin: 0 !important;
+    }
+    .segment.mobile-navbar .menu .right.menu > .item:last-child .menu.transition .item {
+        color: #404040 !important;
+        display: inline-block;
+        text-transform: uppercase;
+        font-size: 1.1em !important;
+        line-height: 2.5em;
+        letter-spacing: 0.2em;
+    }
+    .segment.mobile-navbar .menu .right.menu > .item:last-child .menu.transition .item.active {
+        border-bottom: 4px solid #00b5ad;
+        border-radius: 0;
+    }
+    .home-header {
+        height: auto;
+        background-repeat: no-repeat !important;
+        background-size: cover !important;
+        position: relative !important;
+        width: 100%;
+        top: 0;
+    }
+    .home-header .main-heading {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 600;
+        font-size: 1.8em !important;
+        letter-spacing: -1px;
+        margin-top: 3.3em !important;
+        margin-bottom: 0;
+    }
+    .home-header .sub-heading {
+        font-family: 'Roboto', sans-serif;
+        font-size: 1.1em !important;
+        margin-top: 0.4em !important;
+        font-weight: 300;
+    }
+    .home-header .free-signup-button {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+        font-size: 0.7em !important;
+        padding: 1.5em;
+        margin-bottom: 2em;
+        margin-top: 1em;
+    }
+    .home-header .free-signup-button a {
+        color: #fff !important;
+    }
+    .course-tour {
+        padding: 4em 1em 7em 1em;
+    }
+    .course-tour h3.header {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 500;
+        color: #404040;
+        font-size: 1.8em !important;
+    }
+    .course-tour p {
+        font-family: 'Roboto', sans-serif;
+        color: #6a7173;
+        font-weight: 300;
+        font-size: 1.2em !important;
+    }
+    .page-header {
+        min-height: 182px !important;
+        background-color: #000;
+        background-size: 100% !important;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .page-header .header {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 600;
+        margin-top: 2.6em !important;
+        letter-spacing: 0.3em;
+        text-transform: uppercase;
+    }
+    .login-form {
+        height: 100%;
+        margin-top: 3em !important;
+        margin-bottom: 5em !important;
+        padding: 1em !important;
+        margin-right: 0 !important;
+    }
+    .custom-error {
+        font-family: 'Roboto', sans-serif;
+        font-weight: 300;
+        margin: 1em !important;
+        letter-spacing: 0.06em;
+        font-size: 0.85em !important;
+    }
+    .page-loader {
+        border: none !important;
+        box-shadow: none !important;
+        background: rgba(255, 255, 255, 0.9) !important;
+        position: absolute !important;
+        width: 100%;
+        height: 100%;
+    }
+    .page-loader .text.loader {
+        background: #fff !important;
+        /* box-shadow: 0 0 10px rgba(0,0,0,0.1); */
+        width: 250px !important;
+        height: 115px !important;
+        border: 1px solid #eee;
+        border-radius: 10px;
+        line-height: 3em;
+    }
+    .page-loader .ui.large.loader:before, .page-loader .ui.large.loader:after {
+        margin: 1em 0em 0em -1.71429rem !important;
+    }
+    .footer {
+        background: #000;
+        margin-top: 2em;
+    }
+}
+@media (min-width: 383px) {
+    .home-header .main-heading {
+        font-size: 2.2em !important;
+        margin-top: 2.3em !important;
+    }
+    .home-header .sub-heading {
+        font-size: 1.2em !important;
+        margin-top: 0.2em !important;
+    }
+    .home-header .free-signup-button {
+        font-size: 0.8em !important;
+    }
+}
+@media (min-width: 551px) {
+    .home-header .main-heading {
+        font-size: 2.7em !important;
+    }
+    .home-header .sub-heading {
+        font-size: 1.4em !important;
+        padding: 0 7%;
+    }
+    .home-header .free-signup-button {
+        font-size: 0.8em !important;
+    }
+}
+@media (min-width: 620px) {
+    .home-header .main-heading {
+        font-size: 3em !important;
+    }
+    .home-header .sub-heading {
+        font-size: 1.5em !important;
+    }
+    .home-header .free-signup-button {
+        font-size: 0.9em !important;
+    }
+}
+@media (min-width: 769px) {
+    .segment.navbar {
+        background: #000 !important;
+        z-index: 1;
+        position: absolute;
+        width: 100%;
+    }
+    .segment.navbar .menu {
+        border: none !important;
+    }
+    .segment.navbar .logo img {
+        width: 110px !important;
+        margin-bottom: -3px !important;
+    }
+    .segment.navbar .or {
+        top: 12% !important;
+    }
+    .home-header .pretitle {
+        font-family: 'Roboto', sans-serif;
+        font-size: 1.1em !important;
+        letter-spacing: 0.8em;
+        margin-top: 9em !important;
+        font-weight: 300;
+    }
+    .home-header .main-heading {
+        font-size: 3.8em !important;
+        margin-top: 0 !important;
+    }
+    .home-header .sub-heading {
+        font-size: 1.5em !important;
+    }
+    .home-header .free-signup-button {
+        margin-bottom: 5em;
+    }
+}
+@media (min-width: 992px) {
+    .segment.navbar .or {
+        top: 11% !important;
+    }
+    .home-header .pretitle {
+        font-size: 1.2em !important;
+        margin-top: 11em !important;
+    }
+    .home-header .main-heading {
+        font-size: 4em !important;
+        margin-top: 0.2em !important;
+    }
+    .home-header .sub-heading {
+        font-size: 1.7em !important;
+        padding: 0;
+    }
+    .home-header .free-signup-button {
+        margin-bottom: 7em;
+    }
+}
+@media (min-width: 1224px) {
+    .home-header .pretitle {
+        font-size: 1.3em !important;
+        margin-top: 11em !important;
+    }
+    .home-header .main-heading {
+        font-size: 4.3em !important;
+        margin-top: 0.2em !important;
+    }
+    .home-header .sub-heading {
+        font-size: 1.8em !important;
+    }
+    .home-header .free-signup-button {
+        margin-bottom: 8em;
+    }
 }
